--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-/node_modules
-/package-lock.json
-/package.json
-/src
-/webpack.config.js
+node_modules
+package-lock.json
+package.json
+src
+webpack.config.js
